# CMakeProjectTemplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  calc.cpp  main.cpp
